--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ header {
     padding: 0px;
     overflow-y: auto;
     overflow-x: hidden;
-    /* border: 1px solid black; */
 }
 #navbar li {
     border-top: 1px solid  #4d4e53;;
@@ -53,7 +52,6 @@ header {
     padding: 10px 30px;
     color: #4d4e53;
     cursor: pointer;
-    /* border: 1px solid black; */
 }
 section article {
     color: #4d4e53;
@@ -75,4 +73,25 @@ code {
     padding: 15px;
     margin: 10px;
     border-radius: 5px;
+}
+@media (max-width: 768px) {
+    #navbar ul {
+        border: 1px solid;
+        height: 206px;
+    }
+    #navbar {
+        background-color: white;
+        position: absolute;
+        padding: 0px;
+        margin: 0px;
+        width: 100%;
+        max-height: 275px;
+        border: none;
+        border-bottom: 2px solid;
+    }
+    #main-doc {
+        position: relative;
+        margin: 0px;
+        margin-top: 270px;
+    }
 }
